# anki-flashcard-generator

./: .env.example  .gitignore  README.md  general_utils.py  generator.py  main.py  notion_utils.py  pyproject.toml  requirements.txt  translate_utils.py
input/: input.html
src/flashcards/: cli.py  config.py  generator.py  images.py  main.py  notion.py  notion_utils.py  translation.py
tests/: test_notion_utils.py  test_translate_utils.py
tests/integration/: test_images.py  test_notion.py  test_notion_utils.py  test_translation.py
tests/unit/: test_generator.py  test_images.py  test_notion.py  test_notion_utils.py  test_translate_utils.py  test_translation.py
