[project]
name = "anki-flashcard-generator"
version = "0.1.0"
description = "CLI tool for generating Anki flashcards from Notion using generative AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "genanki>=0.13.1",
    "google-genai>=1.36.0",
    "notion-client>=2.5.0",
    "openai>=1.107.2",
    "pydantic>=2.11.9",
    "pytest>=8.4.2",
]
