[project]
name = "flashcards"
version = "0.1.0"
description = "CLI tool for generating Anki flashcards from Notion using generative AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "genanki>=0.13.1",
    "google-genai>=1.36.0",
    "loguru>=0.7.3",
    "notion-client>=2.5.0",
    "openai>=1.107.2",
    "pillow>=12.1.0",
    "pydantic>=2.11.9",
]

[dependency-groups]
dev = ["pytest>=9.0.2"]

[project.scripts]
anki = "flashcards.main:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.pytest]
addopts = ["--import-mode=importlib"]
